--- a/templates/application/index.html
+++ b/templates/application/index.html
@@ -12,7 +12,7 @@
     <script src="{% static 'rps/scripts/modernizr-2.6.2.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="{% static 'application/scripts/bootstrap.min.js' %}"></script>
-    <title>{{ title }} Rock-Paper-Scissors-Lizard-Spock </title>
+    <title>{{ title }} Rock-Paper-Lizard </title>
     
 </head>
 
