--- a/templates/application/login.html
+++ b/templates/application/login.html
@@ -40,7 +40,7 @@
     
         <hr/>
             <footer>
-                <p>&copy; {{ year }} - Rock-Paper-Scissors-Lizard-Spoke. All rights reserved</p>
+                <p>&copy; {{ year }} - Rock-Paper-Scissors. All rights reserved</p>
             </footer>
 {% endblock %}
 
